[gd_scene load_steps=4 format=3 uid="uid://c3rdndhhnnm5i"]

[ext_resource type="Script" path="res://scenes/log_in/log_in_scene.gd" id="1_jx05n"]
[ext_resource type="Script" path="res://scenes/log_in/log_in_button.gd" id="2_ny5re"]
[ext_resource type="Script" path="res://scenes/log_in/timer_label.gd" id="3_h1avb"]

[node name="LogInScene" type="Node2D"]
script = ExtResource("1_jx05n")

[node name="LogInButton" type="Button" parent="."]
offset_left = 611.0
offset_top = 616.0
offset_right = 791.0
offset_bottom = 666.0
size_flags_horizontal = 4
text = "Log in"
script = ExtResource("2_ny5re")

[node name="UsernameLineEdit" type="LineEdit" parent="LogInButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -185.0
offset_right = 160.0
offset_bottom = -135.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Username"
alignment = 1

[node name="PasswordLineEdit" type="LineEdit" parent="LogInButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -105.0
offset_right = 160.0
offset_bottom = -55.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "Password"
alignment = 1
secret = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 24.0
offset_top = 21.0
offset_right = 64.0
offset_bottom = 44.0
theme_override_font_sizes/font_size = 40
script = ExtResource("3_h1avb")

[node name="Timer" type="Timer" parent="Label"]
wait_time = 1e+06

[node name="LogInMessageLabel" type="Label" parent="."]
offset_left = 594.0
offset_top = 326.0
offset_right = 910.0
offset_bottom = 432.0
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.789246, 0.227506, 0.224367, 1)
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="DtlsStatusLabel" type="Label" parent="."]
offset_left = 39.0
offset_top = 121.0
offset_right = 79.0
offset_bottom = 144.0

[connection signal="started_connecting" from="." to="." method="_on_started_connecting"]
[connection signal="log_in_pressed" from="LogInButton" to="." method="_on_log_in_button_log_in_pressed"]
[connection signal="pressed" from="LogInButton" to="LogInButton" method="_on_pressed"]
